--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ header ul a:hover{
 .info-cards{
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
+    align-items: stretch;
     gap: 20px;
     width: 100%;
     height: 100%;
@@ -368,7 +369,9 @@ header ul a:hover{
 
 .card:nth-child(3){
     grid-row: span 2;
-    height: 83vh;
+    height: auto;
+    min-height: 0;
+    align-self: stretch;
 }
 
 .card:nth-child(3) p{
