--- a/style.css
+++ b/style.css
@@ -1490,11 +1490,16 @@ header ul a:hover{
         flex-direction: column;
         align-items: stretch;
         min-height: 0;
-        gap: 20px;
+        gap: 10px;
         margin-left: 0;
     }
 
+    .project-card + .project-card{
+        margin-top: 18px;
+    }
+
     .project-vidbox{
+        flex: 0 0 auto;
         width: 100%;
         max-width: none;
         min-width: 0;
@@ -1506,7 +1511,9 @@ header ul a:hover{
     }
 
     .project-info{
+        flex: 0 0 auto;
         width: 100%;
+        justify-content: flex-start;
         padding-left: 0;
         margin-left: 0;
         overflow: visible;
